add bootstrap lessons

--- a/app/views/html_css_lessons/lessons/lesson_14.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_14.html.erb
@@ -1,26 +1,21 @@
 <h1><%= title_for(HtmlCssLesson, 4, 1) %></h1>
 
 <p>
-  Congratulations everyone on coming this far! You've accomplished so much in such a short period of time. Within two weeks, you have:
-</p>
-
-<ul>
-  <li>Learned the basics of HTML/CSS</li>
-  <li>Learned Twitter Bootstrap</li>
-  <li>Built multiple web pages</li>
-  <li>Built your own personal resume page</li>
-</ul>
+  Congratulations on finishing the pre-work assignments!
+</p>  
 
 <p>
-   This is a lot of things in two weeks, and we are super excited!
-</p>
+  Once you are admitted into TECHRISE, <strong>the difficulty of lessons will increase dramatically.</strong> You will be asking more and more questions to your mentor and to your fellow students, and <strong>you will be learning at a much quicker speed.</strong>
+</p>  
+
+<h3>Next Steps</h3>
 
 <p>
-  The sections after this is going to be more challenging, and it takes a lot of effort to go through the lessons. We are confident that you will be able to succeed in our curriculum, since you have proven to be able to complete the tasks.
+  We will next schedule an interview session to see if TECHRISE is right for you. During your interview, if you have any questions or concerns, please let us know.
 </p>
 
-<p>
-  Since you have finished all of the assignments, you will be invited for interviews over the next couple of weeks. We are looking for motivated students who will be able to keep on learning!
+<p> 
+  We only accept motivated students to join TECHRISE. This is to build and maintain a positive and active community.
 </p>
 
 <p>
