--- a/app/views/html_css_lessons/lessons/lesson_4.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_4.html.erb
@@ -42,7 +42,7 @@
 <%= image_tag 'gist_share.png', class: 'screenshot' %>
 
 <p>
-  Finally to submit, <span style="color:red;">go to the submissions page below and paste in that URL :)</span>
+  Finally to submit, <strong>go to the submissions page below and paste in that URL :)</strong>
 </p>
 
 <p>
