--- a/app/views/html_css_lessons/lessons/lesson_1.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_1.html.erb
@@ -1,87 +1,17 @@
-<style>
-.lesson_nav_box:nth-of-type(2) {
-	display: none;
-}
-</style>
-
 <h1><%= title_for(HtmlCssLesson, 1, 1) %></h1>
 
 <p>
-	Here's when the fun begins! You'll finally write your first lines of code delve into the world of coding.
+	Before you get started on the pre-work assignments, here are a few quick guidelines for you to learn the maximum amount:
 </p>
+
+<ul>
+	<li><strong>Don't copy and paste</strong> - it is always better to actually type the code yourself. <strong>Msucle memory</strong> is really important when learning how to code!</li>
+	<li><strong>Ask Questions</strong> - whenever something doesn't make sense to you, first google, then ask for help! We are always here to help out.</li>
+	<li><strong>Don't be frustrated</strong> - some of these lessons might be difficult for you, but don't be frustrated, it's part of learning and it is important to relax and keep on going.</li>
+</ul>
 
 <p>
-  The first skill you will acquire is writing HTML and CSS code.
+  <strong>Don't worry about memorizing all of the syntax</strong>, that will come with time and experience. <em>If you forget the syntax, you can always just Google it.</em>
 </p>
 
-<blockquote>
 
-	<p>Just a quick refresher:</p>
-
-	<footer>
-		HTML is a language that describes the structure of the web page. Every web page has an HTML file and it's what dictates what you see on the browser. With HTML, you can tell the web page to have a header with the name "I like Ice Cream", a paragraph saying "Ice cream is a sophisticated food. It comes in all flavors and colors, etc...", an image of ice cream on top of the paragraph, etc. You can basically tell the web page what you want to include in what format.
-	</footer>
-	<br>
-	<footer>
-		CSS is a language that describes how the web page should be displayed. So basically with CSS, you can make the web page have a super pink background, make the fonts huge, or anything you want it to look like. Think of CSS like a blueprint for your design.
-	</footer>
-
-</blockquote>
-
-<p>
-  HTML and CSS is pretty simple once you get used to it. Don't worry about memorizing all the syntax, that will come with time and experience. If you forget the syntax, you can always just Google it ;)
-</p>
-
-<p>
-  What you should be focusing on though, is understand the general flow of how a web page is structured. If you stumble across a question like "wait, how do I make a link to a URL again?", <strong>Google it.</strong> Google "how to make a link to url html" and you'll get your answer in 2 seconds. What do you do if you want to make the color of your font red? Google "how to make font color red". Boom, you got your answer. Easy, right?
-</p>
-
-<%= create_flashcard %>
-
-<p>
-  Cool. Well we're all set! We're super excited to get you started with coding!
-</p>
-
-<blockquote>
-	<h3>
-		After this, there is no turning back. You take the blue pill -- the story ends, you wake up in your bed and believe whatever you want to believe. You take the red pill -- you stay in Wonderland and I show you how deep the rabbit hole goes.
-	</h3>
-	<footer>Morpheus</footer>
-</blockquote>
-
-<br>
-
-<div class = "lesson_nav_box text-center">
-	<button id = "BluePill" class = "btn btn-lg" style = "background-color:#3F47CF;color:white;">Take the Blue Pill</button>
-	<%= link_to 'Take the Red Pill', html_css_lessons_path(2), class: 'btn btn-lg', style: 'background-color:#FB0000;color:white;' %>
-</div>
-
-<br class = "clear">
-
-
-<script>
-$("#BluePill").click(function(){
-
-	if (confirm("Are you sure?")) {
-		if (confirm("Really?")) {
-			if (confirm("No way.")) {
-				if (confirm("LOL you're just playing, just click Cancel.")) {
-					if (confirm("Coding is pretty cool though.")) {
-						if (confirm("I promise it's pretty fun.")) {
-							if (confirm("It will change your life!")) {
-								if (confirm("Are you really sure?")) {
-									if (confirm("Sad to see you leave :( Bye :(	")) {
-										window.location.href = "/";
-									}
-								}
-							}
-						}
-					}
-				}
-			}
-		}
-	}
-
-})
-
-</script>
