--- a/app/views/html_css_lessons/lessons/lesson_3.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_3.html.erb
@@ -49,7 +49,7 @@
 </ul>
 
 <p>
-  In the following lessons, we'll walk you through how to use GitHub, so don't worry about trying to figure out how to use it just yet.
+  In the following lesson, we'll walk you through how to use GitHub, so don't worry about trying to figure out how to use it just yet.
 </p>
 
 <hr>
