--- a/app/views/bootstrap_lessons/lessons/lesson_2.html.erb
+++ b/app/views/bootstrap_lessons/lessons/lesson_2.html.erb
@@ -1,4 +1,4 @@
-<h1><%= title_for(HtmlCssLesson, 3, 2) %></h1>
+<h1><%= title_for(BootstrapLesson, 1, 2) %></h1>
 
 <p>
   Awesome, let's get going.
