--- a/app/views/bootstrap_lessons/lessons/lesson_6.html.erb
+++ b/app/views/bootstrap_lessons/lessons/lesson_6.html.erb
@@ -1,4 +1,4 @@
-<h1><%= title_for(HtmlCssLesson, 3, 6) %></h1>
+<h1><%= title_for(BootstrapLesson, 1, 6) %></h1>
 
 <p>
   Cool, let's add some more content to make the page look more legit.
