--- a/app/views/bootstrap_lessons/lessons/lesson_8.html.erb
+++ b/app/views/bootstrap_lessons/lessons/lesson_8.html.erb
@@ -1,4 +1,4 @@
-<h1><%= title_for(HtmlCssLesson, 3, 8) %></h1>
+<h1><%= title_for(BootstrapLesson, 1, 8) %></h1>
 
 <p>
   Things look pretty awesome now! It still needs a little spice, so let's add those final touches to make the page look more professional.
