--- a/app/views/bootstrap_lessons/lessons/lesson_1.html.erb
+++ b/app/views/bootstrap_lessons/lessons/lesson_1.html.erb
@@ -1,4 +1,4 @@
-<h1><%= title_for(HtmlCssLesson, 3, 1) %></h1>
+<h1><%= title_for(BootstrapLesson, 1, 1) %></h1>
 
 <p>
   In this lesson, you will be learning the fundamentals of Twitter Bootstrap.
