--- a/app/views/bootstrap_lessons/lessons/lesson_3.html.erb
+++ b/app/views/bootstrap_lessons/lessons/lesson_3.html.erb
@@ -1,4 +1,4 @@
-<h1><%= title_for(HtmlCssLesson, 3, 3) %></h1>
+<h1><%= title_for(BootstrapLesson, 1, 3) %></h1>
 
 <p>
   Now that we've got bootstrap set up, let's see what we can do with it.
