--- a/app/views/ideator_lessons/lessons/lesson_7.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_7.html.erb
@@ -132,12 +132,11 @@
 <pre><code class = "css">
 .navbar-default .navbar-brand {
   font-weight: 100;
-  letter-spacing: 8px;
   font-size: 30px;
 }
 </code></pre>
 
-<div class="well">
+<!-- <div class="well">
   <h3>Font Styles</h3>
 
   <p>
@@ -156,7 +155,7 @@
     There a bunch more that you could use, but personally I like to play around with these two properties to achieve different styles.
   </p>
 
-</div>
+</div> -->
 
 <p>
   Let’s now commit this to GitHub so we don’t lose any of the changes. From now on, we'll call this the <strong>standard git workflow</strong>.
@@ -168,14 +167,4 @@ git commit -am “Style navbar”
 git push origin master
 </code></pre>
 
-
-
-<script>
-$( '#HideHighFive' ).click(function() {
-	$( '#HideHighFive' ).hide();
-	$( " #HighFive " ).show();
-  $( " #HighFive " ).hide( "puff", {percent:500}, 2000 );
-  $( '#HideHighFive' ).delay(2000).show(0);
-});
-</script>
 
