--- a/app/views/ideator_lessons/lessons/lesson_11.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_11.html.erb
@@ -28,9 +28,10 @@
 &lt;% @ideas.each do |idea| %&gt;
   &lt;div class="panel panel-default"&gt;
     &lt;div class="panel-body"&gt;
-      &lt;h3&gt;&lt;%= idea.description %&gt;&lt;/h3&gt;
-      &lt;h4&gt;&lt;%= idea.author %&gt;&lt;/h4&gt;
-    &lt;/div&gt;
+      &lt;blockquote&gt;
+        &lt;p&gt;&lt;%= idea.description %&gt;&lt;/p&gt;
+        &lt;small&gt;by &lt;%= idea.author %&gt;&lt;/small&gt;
+      &lt;/blockquote&gt; 
   &lt;/div&gt;
 &lt;% end %&gt;
 </code></pre>
@@ -38,21 +39,6 @@
 <p>
   Save the file and refresh the page. You should now see that each of the ideas have their own panel, this is pretty cool! 
 </p>
-
-<p>
-  In addition, to make it look even nicer let's make it so that the <code>author</code> is pulled to the right and says "by NameOfAuthor" instead of just displaying their name. We can do this by adding a <code>pull-right</code> class to the <code>h4</code>. Your code should look like this:
-</p>
-
-<pre><code class="erb">
-&lt;% @ideas.each do |idea| %&gt;
-  &lt;div class="panel panel-default"&gt;
-    &lt;div class="panel-body"&gt;
-      &lt;h3&gt;&lt;%= idea.description %&gt;&lt;/h3&gt;
-      &lt;h4 class = "pull-right"&gt;&lt;%= idea.author %&gt;&lt;/h4&gt;
-    &lt;/div&gt;
-  &lt;/div&gt;
-&lt;% end %&gt;
-</code></pre>
 
 <p>
   Let's go back into the browser and refresh the page. Awesome! You should now see each idea wrapped around in a panel.
