--- a/app/views/ideator_lessons/lessons/lesson_19.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_19.html.erb
@@ -62,11 +62,17 @@ end
 <pre><code class="erb">
 &lt;div class="panel panel-default"&gt;
   &lt;div class="panel-body"&gt;
-    &lt;h3&gt;&lt;%= @idea.description %&gt;&lt;/h3&gt;
-    &lt;h4 class = "pull-right">by &lt;%= @idea.author %&gt;&lt;/h4&gt;
+    &lt;blockquote&gt;
+      &lt;p&gt;&lt;%= @idea.description %&gt;&lt;/p&gt;
+      &lt;small&gt;by &lt;%= @idea.author %&gt;&lt;/small&gt;
+    &lt;/blockquote&gt;
+      
     &lt;br&gt;
-    &lt;%= link_to 'Delete', idea_path(@idea), method: :delete, class: 'btn btn-sm pull-left', data: {confirm: "Are you sure?"} %&gt;
-    &lt;%= link_to 'Revise', edit_idea_path(@idea), class: 'btn btn-sm pull-left' %&gt;
+
+    &lt;div class="btn-group" role="group"&gt;
+      &lt;%= link_to 'Delete', idea_path(@idea), method: :delete, class: 'btn btn-sm btn-danger', data: {confirm: "Are you sure?"} %&gt;
+      &lt;%= link_to 'Revise', edit_idea_path(@idea), class: 'btn btn-sm btn-success' %&gt;
+    &lt;/div&gt;
   &lt;/div&gt;
 &lt;/div&gt;
 </code></pre>
@@ -110,14 +116,19 @@ end
     
   &lt;div class="panel panel-default"&gt;
     &lt;div class="panel-body"&gt;
-      &lt;h3&gt;&lt;%= @idea.description %&gt;&lt;/h3&gt;
-      &lt;h4 class = "pull-right">by &lt;%= @idea.author %&gt;&lt;/h4&gt;
+      &lt;blockquote&gt;
+        &lt;p&gt;&lt;%= @idea.description %&gt;&lt;/p&gt;
+        &lt;small&gt;by &lt;%= @idea.author %&gt;&lt;/small&gt;
+      &lt;/blockquote&gt;
+        
       &lt;br&gt;
-      &lt;%= link_to 'Delete', idea_path(@idea), method: :delete, class: 'btn btn-sm pull-left', data: {confirm: "Are you sure?"} %&gt;
-      &lt;%= link_to 'Revise', edit_idea_path(@idea), class: 'btn btn-sm pull-left' %&gt;
+
+      &lt;div class="btn-group" role="group"&gt;
+        &lt;%= link_to 'Delete', idea_path(@idea), method: :delete, class: 'btn btn-sm btn-danger', data: {confirm: "Are you sure?"} %&gt;
+        &lt;%= link_to 'Revise', edit_idea_path(@idea), class: 'btn btn-sm btn-success' %&gt;
+      &lt;/div&gt;
     &lt;/div&gt;
   &lt;/div&gt;
-&lt;% else %&gt;
   
   &lt;h4&gt;No ideas have been shared. Add one &lt;%= link_to 'here', root_path %&gt;&lt;/h4&gt;
 
