--- a/app/views/ideator_lessons/lessons/lesson_8.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_8.html.erb
@@ -46,22 +46,144 @@ body {
 </p>
 
 <pre><code class="erb">
-&lt;!--closing div for div id = "wrap"--&gt;
+&lt;!-- HTML code above --&gt;
+
+&lt;div id = "wrap"&gt;
+  &lt;nav class="navbar navbar-default"&gt;
+    &lt;div class="container-fluid"&gt;
+      &lt;!-- Brand and toggle get grouped for better mobile display --&gt;
+      &lt;div class="navbar-header"&gt;
+        &lt;button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"&gt;
+          &lt;span class="sr-only"&gt;Toggle navigation&lt;/span&gt;
+          &lt;span class="icon-bar"&gt;&lt;/span&gt;
+          &lt;span class="icon-bar"&gt;&lt;/span&gt;
+          &lt;span class="icon-bar"&gt;&lt;/span&gt;
+        &lt;/button&gt;
+        &lt;a class="navbar-brand" href="/" style="color: #337AB7;"&gt;Ideator&lt;/a&gt;
+      &lt;/div&gt;
+
+      &lt;!-- Collect the nav links, forms, and other content for toggling --&gt;
+      &lt;div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"&gt;
+        &lt;ul class="nav navbar-nav navbar-right"&gt;
+          &lt;li&gt;&lt;%= link_to 'All Ideas', root_path %&gt;&lt;/li&gt;
+          &lt;li&gt;&lt;%= link_to 'Inspire Me', random_path %&gt;&lt;/li&gt;
+          &lt;li&gt;&lt;%= link_to 'About', about_path %&gt;&lt;/li&gt;
+        &lt;/ul&gt;
+      &lt;/div&gt;&lt;!-- /.navbar-collapse --&gt;
+    &lt;/div&gt;&lt;!-- /.container-fluid --&gt;
+  &lt;/nav&gt;
+
+  &lt;%= yield %&gt;
+  
 &lt;/div&gt;
 
-&lt;div id="footer"&gt;
+&lt;footer class="footer text-center"&gt;
   &lt;div class="container"&gt;
-    
+    &lt;div class = "row"&gt;
+      &lt;div class = "col-xs-12 col-md-4"&gt;
+        &lt;h4&gt;Contact&lt;/h4&gt;
+        &lt;p&gt;contact@techrise.me&lt;/p&gt;
+      &lt;/div&gt;
+      &lt;div class = "col-xs-12 col-md-4"&gt;
+        &lt;h4&gt;Find Us&lt;/h4&gt;
+        &lt;div class="social-buttons"&gt;
+          &lt;a href = "#"&gt;&lt;i class="fa fa-facebook-official social" &gt;&lt;/i&gt;&lt;/a&gt;
+          &lt;a href = "#"&gt;&lt;i class="fa fa-twitter-square social" &gt;&lt;/i&gt;&lt;/a&gt;
+          &lt;a href = "#"&gt;&lt;i class="fa fa-linkedin-square social" &gt;&lt;/i&gt;&lt;/a&gt;
+        &lt;/div&gt;
+      &lt;/div&gt;
+      &lt;div class = "col-xs-12 col-md-4"&gt;
+        &lt;h4&gt;&copy; TECHRISE 2016&lt;/h4&gt;
+        &lt;p&gt;All Rights Reserved&lt;/p&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;
   &lt;/div&gt;
-&lt;/div&gt;
+&lt;/footer&gt;
 
 &lt;/body&gt;
 &lt;/html&gt;
 </code></pre>
 
 <p>
-	Make sure to put the footer code right before the closing <code>body</code> tag and also right after the closing div tag for the <code>&lt;div id = "wrap"&gt;</code>.
+	Make sure to put the footer code right <strong>before</strong> the closing <code>body</code> tag and also right after the closing div tag for the <code>&lt;div id = "wrap"&gt;</code>.
 </p>
+
+<p>
+  Also, let's wrap the <code>&lt;%= yield &gt;</code> block in a <code>container</code> div. In order to use the bootstrap grid system correctly, we need to wrap our content in a <code>container</code> or <code>container-fluid</code> div. Read more about this <%= link_to 'here', ' http://getbootstrap.com/css/#overview-container' %>.
+</p>  
+
+<pre><code class="erb">
+&lt;!-- HTML code above --&gt;
+  &lt;div class = "container"&gt;
+    &lt;%= yield %&gt;
+  &lt;/div&gt;
+&lt;!-- HTML code below --&gt;
+</code></pre>
+
+<p>
+  Your <code>application.html.erb</code> file should now look something like this:
+</p>
+
+<pre><code class="erb">
+&lt;!-- HTML code above --&gt;
+  
+&lt;div id = "wrap"&gt;
+  &lt;nav class="navbar navbar-default"&gt;
+    &lt;div class="container-fluid"&gt;
+      &lt;!-- Brand and toggle get grouped for better mobile display --&gt;
+      &lt;div class="navbar-header"&gt;
+        &lt;button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"&gt;
+          &lt;span class="sr-only"&gt;Toggle navigation&lt;/span&gt;
+          &lt;span class="icon-bar"&gt;&lt;/span&gt;
+          &lt;span class="icon-bar"&gt;&lt;/span&gt;
+          &lt;span class="icon-bar"&gt;&lt;/span&gt;
+        &lt;/button&gt;
+        &lt;a class="navbar-brand" href="/" style="color: #337AB7;"&gt;Ideator&lt;/a&gt;
+      &lt;/div&gt;
+
+      &lt;!-- Collect the nav links, forms, and other content for toggling --&gt;
+      &lt;div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"&gt;
+        &lt;ul class="nav navbar-nav navbar-right"&gt;
+          &lt;li&gt;&lt;%= link_to 'All Ideas', root_path %&gt;&lt;/li&gt;
+          &lt;li&gt;&lt;%= link_to 'Inspire Me', random_path %&gt;&lt;/li&gt;
+          &lt;li&gt;&lt;%= link_to 'About', about_path %&gt;&lt;/li&gt;
+        &lt;/ul&gt;
+      &lt;/div&gt;&lt;!-- /.navbar-collapse --&gt;
+    &lt;/div&gt;&lt;!-- /.container-fluid --&gt;
+  &lt;/nav&gt;
+
+  &lt;div class = "container"&gt;
+    &lt;%= yield %&gt;
+  &lt;/div&gt;
+  
+&lt;/div&gt;
+
+&lt;footer class="footer text-center"&gt;
+  &lt;div class="container"&gt;
+    &lt;div class = "row"&gt;
+      &lt;div class = "col-xs-12 col-md-4"&gt;
+        &lt;h4&gt;Contact&lt;/h4&gt;
+        &lt;p&gt;contact@techrise.me&lt;/p&gt;
+      &lt;/div&gt;
+      &lt;div class = "col-xs-12 col-md-4"&gt;
+        &lt;h4&gt;Find Us&lt;/h4&gt;
+        &lt;div class="social-buttons"&gt;
+          &lt;a href = "#"&gt;&lt;i class="fa fa-facebook-official social" &gt;&lt;/i&gt;&lt;/a&gt;
+          &lt;a href = "#"&gt;&lt;i class="fa fa-twitter-square social" &gt;&lt;/i&gt;&lt;/a&gt;
+          &lt;a href = "#"&gt;&lt;i class="fa fa-linkedin-square social" &gt;&lt;/i&gt;&lt;/a&gt;
+        &lt;/div&gt;
+      &lt;/div&gt;
+      &lt;div class = "col-xs-12 col-md-4"&gt;
+        &lt;h4&gt;&copy; TECHRISE 2016&lt;/h4&gt;
+        &lt;p&gt;All Rights Reserved&lt;/p&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/footer&gt;
+
+&lt;/body&gt;
+&lt;/html&gt;
+</code></pre>
 
 <p>
   Awesome! Now that we've set up our footer to stick to the bottom of the page, let's start adding in some content into it.
@@ -128,7 +250,7 @@ body {
     &lt;div class = "row"&gt;
       &lt;div class = "col-xs-12 col-md-4"&gt;
         &lt;h4&gt;Contact&lt;/h4&gt;
-        &lt;p&gt;techrisecoding@gmail.com&lt;/p&gt;
+        &lt;p&gt;contact@techrise.me&lt;/p&gt;
       &lt;/div&gt;
       &lt;div class = "col-xs-12 col-md-4"&gt;
         &lt;h4&gt;Find Us&lt;/h4&gt;
@@ -139,7 +261,7 @@ body {
         &lt;/div&gt;
       &lt;/div&gt;
       &lt;div class = "col-xs-12 col-md-4"&gt;
-        &lt;h4&gt;&copy; Techrise 2016&lt;/h4&gt;
+        &lt;h4&gt;&copy; TECHRISE 2016&lt;/h4&gt;
         &lt;p&gt;All Rights Reserved&lt;/p&gt;
       &lt;/div&gt;
     &lt;/div&gt;
