revise ideator lessons

--- a/app/views/ideator_lessons/lessons/lesson_1.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_1.html.erb
@@ -21,6 +21,19 @@
 <p>
 	Let's get started!
 </p>
+
+<div class="well">
+	<h3>What we will be building</h3>
+
+	<p>
+		Go to <%= link_to 'this link', 'http://techrise-ideator.herokuapp.com/' %> to get an overview of what kind of application we are going to create.
+	</p>	
+
+	<p>
+		It is a simple web application where users can post ideas free onto the website. Think of it as a super simple version of Twitter.
+	</p>
+</div>
+
 <!-- 
 <p>
 	<strong>First, download Tokaido <a href = "https://github.com/tokaido/tokaidoapp/releases" target = "_blank">Here</a>.</strong> This will enable you to use Ruby on Rails instantly.
