--- a/app/views/ideator_lessons/lessons/lesson_4.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_4.html.erb
@@ -63,7 +63,7 @@ end
 <%= create_flashcard %>
 
 <p>
-	Inside this file, let’s delete <code># root 'welcome#index'</code> and instead replace it with <code>root ‘ideas#index’</code>.
+	Inside this file, let’s delete <code># root 'welcome#index'</code> and instead replace it with <code>root 'ideas#index'</code>.
 </p>
 
 <p>
