--- a/app/views/intro_lessons/lessons/lesson_1.html.erb
+++ b/app/views/intro_lessons/lessons/lesson_1.html.erb
@@ -5,13 +5,13 @@
 </p>
 
 <p>
-	Our mission at TECHRISE is to provide friendly and meaningful support for our students so that students can start coding to achieve their dreams. <strong>We believe that even though there are infinite amount of free online resources, it is still hard to learn web development when you are first starting out.</strong> <strong>We are here to teach and motivate students to become skilled web developers in a short amount of time by teaching not only the skills, but also the mentality of web developers with an innovative coding education platform</strong>.
+	Our mission at TECHRISE is to provide friendly and meaningful support for our students so that students can start coding to achieve their dreams. <strong>We believe that even though there is an infinite amount of free online resources, it is still hard to learn web development when you are first starting out.</strong> <strong>We are here to teach and motivate students to become skilled web developers in a short amount of time by teaching not only the skills, but also the mentality of web developers with an innovative coding education platform</strong>.
 </p>
 
 <h3>This is how we do it</h3>
 
 <p>
-	First, <strong>we make sure that all of our students are motivated</strong>. This is to ensure that our student community is active and full of motivated learners. We have prework assignments to filter out potential students that aren't motivated. These prework assignments aren't so difficult - some people finish the assignments within days. If you have the motivation, it is easy to finish these assignments on time. <strong>If you have any questions, you can always ask on the online forums for free as well :)</strong>
+	First, <strong>we make sure that all of our students are motivated</strong>. This is to ensure that our student community is active and full of motivated learners. We have prework assignments to select only highly motivated individuals. These prework assignments aren't so difficult - some people finish the assignments within days. If you have the motivation, it is easy to finish these assignments on time. <strong>If you have any questions, you can always ask on the online forums for free as well :)</strong>
 </p>
 
 <p>
@@ -63,16 +63,13 @@
 <h3>Career Support</h3>
 
 <p>
-	After graduating from TECHRISE, <strong>we offer an option for exceptional students to continue their learning experience as a junior mentor at TECHRISE.</strong>
+	After graduating from TECHRISE, <strong>we offer opportunities for exceptional students to continue their learning experience as mentors at TECHRISE.</strong>
 </p>
 
 <p>
-	As a junior mentor, you will be responsible for answering questions on the online community and helping students out in any way possible. By working as a junior mentor, <strong>you will not only be able to teach and help others, but also learn more about web development.</strong>
+	As a mentor, you will be responsible for answering questions on the online community and helping students out in any way possible. By working as a junior mentor, <strong>you will not only be able to teach and help others, but also learn more about web development.</strong>
 </p>
 
-<p>
-	<strong>Junior mentors that have proven to be a helpful junior mentor and have accumulated enough knowledge will be promoted as a Senior mentor.</strong> Senior mentors are responsible for supporting students by conducting 1 on 1 mentor sessions.
-</p>
 
 <h3>First Steps</h3>
 
