--- a/app/views/ideator_lessons/lessons/lesson_4.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_4.html.erb
@@ -39,6 +39,10 @@ end
 	In Sublime, let’s right click on the <code>ideas</code> folder and create a new file. Let’s save that file as <code>index.html.erb</code>.
 </p>
 
+<p class="alert alert-success">
+	<code>erb</code> stands for Embedded Ruby. By making the file extension, <code>html.erb</code> we can embed ruby code in our HTML files. We will see how this works in the next few lessons.
+</p>
+
 <p>
 	Inside <code>index.html.erb</code>, let’s add this:
 </p>
