--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -24,12 +24,15 @@
                         </ul>
                     </div><!--//footer-col-inner-->
                 </div><!--//foooter-col-->              
-                <div class="footer-col links col-sm-3 col-xs-12 sm-break">
+                <div class="footer-col connect links col-sm-3 col-xs-12 sm-break">
                     <div class="footer-col-inner">
-                        <h3 class="title">Support</h3>
-                        <ul class="list-unstyled">
-                            <li><a href="#"><i class="fa fa-caret-right"></i>Terms of services</a></li>
-                            <li><a href="#"><i class="fa fa-caret-right"></i>Privacy</a></li>
+                        <h3 class="title">Get in Touch</h3>
+                        <ul class="social list-inline">
+                            <!-- <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li> -->
+                            <li><a href="https://www.facebook.com/TECHRISE-200095187051747/?fref=ts"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://www.linkedin.com/company/techrise"><i class="fa fa-linkedin"></i></a></li>
+                            <!-- <li><a href="#"><i class="fa fa-instagram"></i></a></li> -->        
+                            <!-- <li class="row-end"><a href="#"><i class="fa fa-rss"></i></a></li> -->             
                         </ul>
                     </div><!--//footer-col-inner-->            
                 </div><!--//foooter-col-->   
@@ -39,20 +42,14 @@
                         <p class="adr clearfix">
                             <i class="fa fa-map-marker"></i>        
                             <span class="adr-group">       
-                                <span class="street-address">Remote Team</span><br>
-                                <span class="region">Nepal</span><br>
-                                <span class="country-name">Japan</span>
+                                <span class="street-address">Jwagal, Kupondole</span><br>
+                                <span class="region">Lalitpur</span><br>
+                                <span class="country-name">Nepal</span>
                             </span>
                         </p>
                         <p class="tel"><i class="fa fa-phone"></i> 9808378374</p>
                         <p class="email"><i class="fa fa-envelope-o"></i><a href="#"> contact@techrise.me</a></p> 
-                        <ul class="social list-inline">
-                            <!-- <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li> -->
-                            <li><a href="https://www.facebook.com/TECHRISE-200095187051747/?fref=ts"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="https://www.linkedin.com/company/techrise"><i class="fa fa-linkedin"></i></a></li>
-                            <!-- <li><a href="#"><i class="fa fa-instagram"></i></a></li> -->        
-                            <!-- <li class="row-end"><a href="#"><i class="fa fa-rss"></i></a></li> -->             
-                        </ul>
+                        
                         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
                         </script>
 <!--                         <div class="form-container">
