--- a/app/views/static_pages/learn.html.erb
+++ b/app/views/static_pages/learn.html.erb
@@ -132,7 +132,7 @@
                     <div class="tab-pane" id="feature-4">
                         <h3 class="title sr-only">Peer Learning & Community</h3>                                    
                         <figure class="figure text-center">
-                            <%= image_tag 'landing_page/slack_screenshot.png', class: 'img-responsive' %>
+                            <%= image_tag 'landing_page/slack.png', class: 'img-responsive' %>
                             <figcaption class="figure-caption">Students interact on Slack and ask each other questions.</figcaption>
                         </figure>
                         <div class="desc text-left">
