--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -17,65 +17,98 @@
         <p class="intro">
           An innovative Learning Platform combining 1-on-1 mentor training, project-based learning, and a friendly student community that will accelerate your path to becoming a web developer.
         </p>
-        <p><a class="btn btn-cta btn-cta-primary" href="/users/sign_up">SIGN UP FOR PRE-WORK</a></p>
+        <p><a class="btn btn-cta btn-cta-primary" href="/users/sign_up">SIGN UP TO GET IMMEDIATE ACCESS TO PRE-WORK</a></p>
     </div><!--//container-->
 </section><!--//promo-->
 
 <div class="sections-wrapper">   
 
-  <section id="how">
-    <div class="container">
-      <div class="header_container">
-        <h2 class="text-center">Your Learning Experience at TECHRISE</h2>
-        <p class="intro text-center">
-          We make sure that our methodology is effective and motivates students.
-        </p>
-      </div>
-
-      <div class="row">
-        <div class="col-xs-12 col-md-5">
-          <h2 class="title">Learn By Building</h2>
-          <p>
-            At TECHRISE, you'll build several projects and learn by building. We believe that in order to improve your technical skills, actually building real-world apps are the most effective way.
-          </p>
-        </div><!-- col-xs-12 col-md-6 -->
-        <div class="col-xs-12 col-md-6 col-md-offset-1">
-          <%= image_tag 'landing_page/imac_lesson.png', class: 'img-responsive', style: 'float: right;' %>
-        </div>
-
-      </div><!-- row -->
-
-      <div class="row" style="margin-top: 80px;">
-
-        <div class="col-xs-12 col-md-5 col-md-offset-1 col-md-push-6">
-          <h2 class="title">Learn With Peers</h2>
-          <p>
-            By asking questions, sharing comments, and learning from each other, you can accelerate your learning. Your path towards becoming a developer is shortened by having an environment where you can learn from your peers.
-          </p>
-        </div><!-- col-xs-12 col-md-6 -->
-
-        <div class="col-xs-12 col-md-6 col-md-pull-6">
-          <%= image_tag 'landing_page/slack_screenshot.png', class: 'img-responsive shadow_screenshot' %>
-        </div>
- 
-      </div><!-- row -->
-
-      <div class="row" style="margin-top: 80px;">
-        <div class="col-xs-12 col-md-5">
-          <h2 class="title">Learn With a Mentor</h2>
-          <p>
-            Speed up your learning with the help of a mentor. Ask questions individually to your mentor and get the support you need. Mentor sessions are held weekly and students ask questions and tackle problems with their mentor.
-          </p>
-        </div><!-- col-xs-12 col-md-6 -->
-
-        <div class="col-xs-12 col-md-5 col-md-offset-1">
-          <%= image_tag 'background/mentor_image.jpg', class: 'img-responsive shadow_screenshot', style: 'float: right;' %>
-        </div>
-
-      </div><!-- row -->
-
-    </div><!-- container -->
-  </section>
+  <!-- ******Why Section****** -->
+  <section id="why" class="section why">
+      <div class="container">
+          <h2 class="title text-center">Your Learning Experience at TECHRISE</h2>
+          <p class="intro text-center">We make sure that our methodology is effective and motivates students.</p>
+          <div class="row item">
+              <div class="content col-md-4 col-sm-12 col-xs-12">
+                  <h3 class="title">Learn By Building</h3>
+                  <div class="desc">
+                      <p>
+                          At TECHRISE, you'll build several projects and learn by building. We believe that in order to improve your technical skills, actually building real-world apps are the most effective way.
+                      </p>
+                  </div>
+                  <div class="quote">
+                      <div class="quote-profile">
+                          <%= image_tag 'landing_page/rabin.jpg', class: 'img-responsive img-circle' %>
+                      </div><!--//profile-->
+                      <div class="quote-content">
+                          <blockquote><p>I love the way TECHRISE teaches me. It's self-learning but you will always have your mentor helping you on your every step. It's a new and effective way of learning.</p></blockquote>
+                          <p class="source">Rabin Gaire</p>
+                      </div><!--//quote-content-->                                     
+                  </div><!--//quote-->                        
+              </div><!--//content-->
+              <figure class="figure col-md-7 col-sm-12 col-xs-12 col-md-offset-1 col-sm-offset-0 col-xs-offset-0">
+                  <%= image_tag 'landing_page/lesson_mac.png', class: 'img-responsive' %>
+                  <figcaption class="figure-caption">Our Online Platform is optimized to Accelerate your Learning</figcaption>
+              </figure>
+          </div><!--//item-->
+          
+          <div class="row item">
+              <div class="content col-md-4 col-sm-12 col-xs-12 col-md-push-8 col-sm-push-0 col-xs-push-0">
+                  <h3 class="title">Learn With a Mentor</h3>
+                  <div class="desc">
+                      <p>
+                          Speed up your learning with the help of a mentor. Ask questions individually to your mentor and get the support you need. Mentor sessions are held weekly and students ask questions and tackle problems with their mentor.
+                      </p>
+                  </div>
+                  
+                  <div class="quote">
+                      <div class="quote-profile">
+                          <%= image_tag 'landing_page/aadesh.jpg', class: 'img-responsive img-circle' %>
+                      </div><!--//profile-->
+                      <div class="quote-content">
+                          <blockquote><p>TECHRISE has been by far the best learning experience for me. My mentor, Takehiro, was very helpful during the course. He is very passionate when it comes to teaching, always willing to explain the concepts behind what we were doing.</p></blockquote>
+                          <p class="source">Aadesh Shrestha</p>
+                      </div><!--//quote-content-->         
+                  </div><!--//quote-->                        
+              </div><!--//content-->
+              <figure class="figure col-md-7 col-sm-12 col-xs-12 col-md-pull-4 col-sm-pull-0 col-xs-pull-0">
+                  <%= image_tag 'background/mentor_image.jpg', class: 'img-responsive' %>                        
+              </figure>
+          </div><!--//item-->
+          
+          
+          <div class="row item last-item">
+              <div class="content col-md-4 col-sm-12 col-xs-12 col-md-push-8 col-sm-push-0 col-xs-push-0">
+                  <h3 class="title">Learn With Peers</h3>
+                  <div class="desc">
+                      <p>
+                          By asking questions, sharing comments, and learning from each other, you can accelerate your learning. Your path towards becoming a developer is shortened by having an environment where you can learn from your peers.
+                      </p>
+                      
+                  </div>
+                  
+                  <div class="quote">
+                      <div class="quote-profile">
+                          <%= image_tag 'landing_page/Aashik.jpg', class: 'img-responsive img-circle' %>
+                      </div><!--//profile-->
+                      <div class="quote-content">
+                          <blockquote><p>I found my passionate family here. When I get stuck, my mentors are always there to help me. The group discussion on Slack is awesome. I really feel great to be here at TECHRISE, it changed my life.</p></blockquote>
+                          <p class="source">Aashik Yadav</p>
+                      </div><!--//quote-content-->
+                  </div><!--//quote-->
+              </div><!--//content-->
+              <figure class="figure col-md-7 col-sm-12 col-xs-12 col-md-pull-4 col-sm-pull-0 col-xs-pull-0">
+                  <%= image_tag 'landing_page/figure-4.png', class: 'img-responsive' %>                        
+              </figure>
+          </div><!--//item-->
+          
+          
+          <div class="feature-lead text-center">
+              <h4 class="title">Want to discover all the features?</h4>
+              <p><a class="btn btn-cta btn-cta-secondary" href="learn.html">Take a Tour</a></p>
+          </div>
+      </div><!--//container-->
+  </section><!--//why-->  
 
   <!-- Skills Grid Section -->
   <section id="skills" class = "section">
@@ -178,10 +211,38 @@
                   <li data-target="#testimonials-carousel" data-slide-to="0" class="active"></li>
                   <li data-target="#testimonials-carousel" data-slide-to="1"></li>
                   <li data-target="#testimonials-carousel" data-slide-to="2"></li>
+                  <li data-target="#testimonials-carousel" data-slide-to="3"></li>
+                  <li data-target="#testimonials-carousel" data-slide-to="4"></li>
               </ol><!--//carousel-indicators-->
               <div class="carousel-inner">
 
                   <div class="item active">
+                      <figure class="profile"><%= image_tag 'landing_page/Aashik.jpg' %></figure>
+                      <div class="content">
+                          <blockquote>
+                          <i class="fa fa-quote-left"></i>
+                          <p>
+                            I always loved computers and wanted to become a great coder but <strong>I didn't know where to start</strong>. I spent hours on google, searching how to start my coding life and become a good coder but I never found one that fit. <strong>Sometimes I thought that I had made a mistake following my heart and choosing IT as my career.</strong> Then one day I finally found an ad on Facebook about TECHRISE and decided to enroll. Here <strong>I found my future and my passion</strong>. <strong>The way TECHRISE teaches is different, it's self-learning and much more goal oriented. I found my passionate family here. When I get stuck, my mentors are always there to help me. The group discussion on Slack is awesome. I really feel great to be here at TECHRISE, it changed my life. Thanks TECHRISE.</strong>
+                          </p>
+                          </blockquote>
+                          <p class="source">Aashik Yadav<br /><span class="title">Current Student at TECHRISE</span></p>
+                      </div><!--//content-->                         
+                  </div><!--//item-->  
+
+                  <div class="item">
+                      <figure class="profile"><%= image_tag 'landing_page/rabin.jpg' %></figure>
+                      <div class="content">
+                          <blockquote>
+                          <i class="fa fa-quote-left"></i>
+                          <p>
+                            I am a BSC.CS.IT student. <strong>I love programming, and always thought of becoming a programmer.</strong> But there was a problem whenever I try to learn something new by myself, it was like I was missing something. <strong>When I got stuck there was no one to help me.</strong> I could search it on internet but the problem was I could not get all what I want. After I joined TECHRISE <strong>I am learning about new things everyday.</strong> It's a new experience integrating new technologies. I am really happy that I am with safe hands. <strong>Thank you TECHRISE for fulfilling my dream to be a good programmer.</strong>
+                          </p>
+                          </blockquote>
+                          <p class="source">Aashik Yadav<br /><span class="title">Current Student at TECHRISE</span></p>
+                      </div><!--//content-->                         
+                  </div><!--//item-->  
+
+                  <div class="item">
                       <figure class="profile"><%= image_tag 'landing_page/aadesh.jpg' %></figure>
                       <div class="content">
                           <blockquote>
@@ -216,7 +277,7 @@
                             I was not so good at coding and was unknown what to do so I can move with the flow of current world but after joining TECHRISE, I am good at coding and able to choose the right field to set my career. Thank you TECHRISE for providing guidance to build up my skill and confidence through lessons, weekly mentor section and assignments.
                           </p>
                           </blockquote>
-                          <p class="source">Sandeep Poudel<br /><span class="title">BSc. at CSIT</span></p>
+                          <p class="source">Sandeep Poudel<br /><span class="title">Computer & Information Sciences Student at Tribhuvan University</span></p>
                       </div><!--//content-->                         
                   </div><!--//item-->                       
                   
