add curriculum page

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -2,6 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.curriculum-cta {
+  margin-top: 50px;
+  background: whitesmoke;
+  padding: 50px 30px;
+}
+
 #mc_embed_signup .mc-field-group label {
   display: block;
   margin-bottom: 3px;
