--- a/app/views/layouts/_nav_contents.html.erb
+++ b/app/views/layouts/_nav_contents.html.erb
@@ -85,6 +85,10 @@
                 <% else %>
 
                     <li class="nav-item page-scroll">
+                      <a href="/curriculum">Curriculum</a>
+                    </li>
+
+                    <li class="nav-item page-scroll">
                       <a href="/learn">Learn More</a>
                     </li>
 
