--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -17,7 +17,7 @@
         <p class="intro">
           An innovative Learning Platform combining 1-on-1 mentor training, project-based learning, and a friendly student community that will accelerate your path to becoming a web developer.
         </p>
-        <p><a class="btn btn-cta btn-cta-primary" href="/users/sign_up">SIGN UP TO GET IMMEDIATE ACCESS TO PRE-WORK</a></p>
+        <p><a class="btn btn-cta btn-cta-primary" href="/users/sign_up">SIGN UP TO START PRE-WORK</a></p>
     </div><!--//container-->
 </section><!--//promo-->
 
@@ -104,8 +104,8 @@
           
           
           <div class="feature-lead text-center">
-              <h4 class="title">Want to discover all the features?</h4>
-              <p><a class="btn btn-cta btn-cta-secondary" href="learn.html">Take a Tour</a></p>
+              <h4 class="title">Want to take a look at the TECHRISE Curriculum?</h4>
+              <p><a class="btn btn-cta btn-cta-secondary" href="curriculum.html">Take a Look</a></p>
           </div>
       </div><!--//container-->
   </section><!--//why-->  
@@ -155,6 +155,10 @@
               <li>Learn and apply Object Oriented Programming, MVC, and test driven development</li>
               <li>Meet Like-minded Individuals who are passionate about coding</li>
             </ul>
+          </div>
+
+          <div class="col-xs-12">
+            <p><a class="btn btn-cta btn-cta-secondary center-block" href="curriculum.html" style="margin: 30px auto;">Take a look at the TECHRISE Curriculum</a></p>
           </div>
 
       </div>
