--- a/app/views/html_css_lessons/lessons/lesson_2.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_2.html.erb
@@ -16,8 +16,8 @@
 
 <ul>
   <li>Go to <a href = "https://dash.generalassemb.ly" target = "_blank">this link</a> to get started! You'll need to sign up for an account.</li>
-  <li><strong>Don't worry about finishing Project 3, 4, and 5</strong></li>
   <li>Finish <strong>Project 1 ~ 2</strong></li>
+  <li><strong>You don't have to finish Project 3, 4, and 5</strong></li>  
   <li>Upload screenshot of your completed Dash Assembly screen in the <%= link_to 'submission page.', new_submission_path(course_name: controller_name.classify, lesson_id: params[:id]) %></li>
   <li>There is no need to submit the code for each of the projects</li>
   <li>Go to next lesson while you wait for our feedback :)</li>
