add coding challenge

--- a/app/views/ruby_core_lessons/lessons/lesson_2.html.erb
+++ b/app/views/ruby_core_lessons/lessons/lesson_2.html.erb
@@ -126,7 +126,7 @@ rspec
 <%= image_tag 'ruby-core/passing-tests.png', class: 'img-responsive screenshot' %>
 
   <p>
-    Submit the code inside of <code>palindrome.rb</code> below :)
+    Submit the code below :)
   </p>
 
   <p>
