--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
 <div class="blog-entry-wrapper"> 
     <!--
     <div class="blog-headline-bg">
-    </div><!--//blog-headline-bg-->
+    </div> blog-headline-bg-->
     <div class="blog-entry">                 
         <article class="post">
         <header class="blog-entry-heading" style="background: #253340 url(<%= @post.featured_image %>) no-repeat 50% top;">
@@ -31,6 +31,35 @@
                         <%= sanitize @post.body %>
 
                     </div><!--//blog-entry-content-->
+
+                    <!-- Begin MailChimp Signup Form -->
+                   
+                    <div class="col-xs-12">
+                        <div class="signup_container">
+                            <h2 class="text-center">STAY INFORMED ABOUT TECHRISE</h2>
+                            <p class="text-center">
+                              At TECHRISE, we take you from zero to developer in 2 months. Stay up to date with TECHRISE by signing up below.
+                            </p>
+
+                            <div class="row">
+                                <form role="form" action="//techrise.us14.list-manage.com/subscribe/post?u=530ad7e805bc39333c8741487&amp;id=06bff0bf27" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+
+                                  <div class="col-xs-12 col-sm-6 col-md-8">
+                                      <div class="form-group">                                
+                                          <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Your Email Address" required>
+                                      </div>
+                                  </div>
+
+                                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_530ad7e805bc39333c8741487_06bff0bf27" tabindex="-1" value=""></div>
+
+                                  <div class="col-xs-12 col-sm-6 col-md-4">
+                                    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-lg btn-cta btn-cta-primary btn-block">
+                                  </div>
+                                </form>  
+                            </div><!-- row -->                        
+                        </div>
+                    </div>
+                    <!--End mc_embed_signup-->
                     
                     <!--//Soical media buttons: https://github.com/kni-labs/rrssb (More examples) -->
                     <div class="share-container col-md-8 col-sm-10 col-xs-12 col-md-offset-2 col-sm-offset-1 col-xs-offset-0"><!--//Soical media buttons: https://github.com/kni-labs/rrssb (More examples) -->
