--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -1163,6 +1163,48 @@ select {
   margin-top: 60px;
   font-size: 20px;
 }
+
+.step {
+  color: #666666;
+}
+
+.step .title {
+  text-align: center;
+  font-size: 16px;
+  margin-bottom: 15px;
+}
+
+.step .title .number {
+  width: 90px;
+  height: 90px;
+  display: block;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border-radius: 50%;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  text-align: center;
+  background: #ec6952;
+  border: 5px solid #f19180;
+  color: #fff;
+  margin: 0 auto;
+  padding-top: 25px;
+  font-size: 26px;
+  font-weight: bold;
+  font-family: arial, sans-serif;
+  margin-bottom: 5px;
+}
+
+.step .title .text {
+  color: #333;
+  font-weight: bold;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
 /* ======= Pricing ======= */
 .pricing {
   padding: 80px 0;
